# bedrock

./: .gitignore  CLAUDE.md  LICENSE  PROGRESS.md  README.md  install.sh  mkdocs.yml  pyproject.toml
.bedrock/: settings.json
.github/workflows/: docs.yml
docs/: architecture.md  cli.md  commands.md  extending.md  getting-started.md  index.md  rules.md
prompts/: gather-stack.md
src/bedrock/: cli.py  console.py  paths.py  scaffold.py  settings.py
templates/: CLAUDE.md  PROGRESS.md
templates/commands/: stack.md
